# studybuddy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.json
src/: app.py  asgi.py  cli.py  settings.json  st_app.py
src/finetuning/: Makefile  Modelfile
src/finetuning/data/: test.jsonl  train.jsonl  valid.jsonl
src/study_buddy/: agency_manifesto.md  api.py  main.py
src/study_buddy/BubbleBot/: bubble_bot.py  instructions.md
src/study_buddy/StudyBuddy/: instructions.md  study_buddy.py
src/study_buddy/models/: request_models.py
src/study_buddy/v2/: agent.py  bkp.py  chatbot.py  config.py  data.py  memory.py  models.py  tools.py
src/teaching_assistant/: api.py  main.py  manifesto.md
src/teaching_assistant/Tara/: instructions.md  tara.py
src/teaching_assistant/models/: request_models.py
